# Code_analyzer_stable

./: .dockerignore  .gitignore  app.py  inference.py  openenv.yml  pyproject.toml  readme.md  requirements.txt
backend/: export_data.py  jobs_data.json  main.py  requirements.txt  worker.py
backend/agents/: __init__.py  analyzer_agents.py  explanation_agent.py  fixed_generator_agent.py  issue_generator_agent.py
backend/api/: routes.py
backend/config/: database.py  redis_client.py  settings.py
backend/models/: db_models.py
backend/services/: aggregator.py  github_service.py  llm_aggregator.py  pipeline.py  vector_store.py
backend/utils/: auth.py  llm.py
frontend/app/: HexGrid.tsx  globals.css  page.tsx
frontend/components/: GlowButton.tsx  HexGrid.tsx
rl/: env.py  reward.py  test_env.py
rl/data/: jobs_data.json
rl/tasks/: tasks.py
server/: app.py
